[gd_scene load_steps=2 format=3 uid="uid://b1g70ggnrifqd"]

[ext_resource type="Script" uid="uid://fq4mpslmwy1c" path="res://Scripts/generator_game.gd" id="1_52nj5"]

[node name="GeneratorGame" type="Control" node_paths=PackedStringArray("somethinglbl", "nothinglbl")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52nj5")
somethinglbl = NodePath("lbls/somethinglbl")
nothinglbl = NodePath("lbls/nothinglbl")

[node name="lbls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 40
alignment = 1

[node name="somethinglbl" type="Label" parent="lbls"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Something: <value>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nothinglbl" type="Label" parent="lbls"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Nothing: <value>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btns" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -40.0
offset_right = 322.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="somethingbtn" type="Button" parent="btns"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
text = "Start Generating Something"

[node name="nothingbtn" type="Button" parent="btns"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
text = "Start Generating nothing"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="btns/somethingbtn" to="." method="_on_somethingbtn_pressed"]
[connection signal="pressed" from="btns/nothingbtn" to="." method="_on_nothingbtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
